examples/datalog/14_aggregations/28_ratio_pattern.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_ratio
Knowledge graph 'test_ratio' created.
Switched to knowledge graph: test_ratio
> .kg use test_ratio
Switched to knowledge graph: test_ratio
> +sales[("North", 100), ("North", 150), ("South", 200), ("South", 250), ("East", 50)].
Inserted 5 fact(s) into 'sales'.
> +region_total(Region, <SUM:Amt>) :- sales(Region, Amt).
Script error: Parse error: Invalid term: '<SUM:Amt>'
